# seb_naver

./: README.md
src/: plan_debug.launch
src/mpc_controller/: CMakeLists.txt  package.xml
src/mpc_controller/include/mpc/: mpc.h
src/mpc_controller/include/utils/: dptraj.hpp  minco_traj.hpp  traj_anal.hpp
src/mpc_controller/launch/: test_mpc.launch
src/mpc_controller/msg/: DPtrajContainer.msg  PolyTraj.msg  PolyTrajAC.msg  SinglePoly.msg  SinglePolyAC.msg  desiredState.msg
src/mpc_controller/params/: controller.yaml
src/mpc_controller/rviz/: test.rviz
src/mpc_controller/src/: mpc.cpp
src/planner/arc_planner/path_search/: CMakeLists.txt  package.xml
src/planner/arc_planner/path_search/include/path_searching/: astar.h  kino_astar.h  kino_model.hpp
src/planner/arc_planner/path_search/src/: astar.cpp  kino_astar.cpp
src/planner/arc_planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/arc_planner/plan_manage/config/: planning.yaml
src/planner/arc_planner/plan_manage/include/arcPlan/: Polytraj.hpp  Trajopt_alm.hpp  lbfgs.hpp
src/planner/arc_planner/plan_manage/include/plan_manage/: plan_manage.h  replan_fsm.h
src/planner/arc_planner/plan_manage/launch/: advanced_param.xml  multi_sim.launch  multi_sim.rviz  write.py
src/planner/arc_planner/plan_manage/rviz/: default.rviz
src/planner/arc_planner/plan_manage/src/: plan_manage.cpp  plan_node.cpp  replan_fsm.cpp  test.cpp
src/planner/decomp_rviz_plugin/tools/: CMakeLists.txt  package.xml
src/planner/decomp_rviz_plugin/tools/include/tools/: config.hpp  gridmap.hpp  visualization.hpp
src/planner/grad_test/: CMakeLists.txt  latGrad_test.cpp  lonGrad_test.cpp  velGrad_test.cpp
src/planner/traj_planner/launch/: multi_tail.launch
src/simulator/fake_ugv/: CMakeLists.txt  package.xml
src/simulator/fake_ugv/scripts/: keyboard_ctrl.py
src/simulator/fake_ugv/src/: poscmd_2_odom.cpp
src/simulator/laser_simulator/launch/: laser_sim.launch  simulator.launch
src/simulator/laser_simulator/src/: laser_sim_node.cpp
src/simulator/map_generator/: CMakeLists.txt
src/simulator/map_generator/src/: map_generator_easy.py
src/tank_sdk/: CMakeLists.txt  package.xml
src/tank_sdk/config/: config.yaml
src/tank_sdk/include/: tank_send.h
src/tank_sdk/launch/: tank_acc_test.launch  tank_sdk.launch  tank_udp.launch
src/tank_sdk/msg/: TankCMD.msg  TankFeedback.msg
src/tank_sdk/params/: simulator.yaml
src/tank_sdk/src/: acc_test_node.cpp  kinematics_sim.cpp  main.cpp  tank_send.cpp  udp_send.cpp
src/tank_slam/: readme
src/tank_slam/FAST_LIO/PCD/: new.pcd  scans.pcd
src/tank_slam/ekf_quat_pose/launch/: PX4_vio_drone.yaml  ekf_quat_lidar.launch
src/tank_slam/ekf_quat_pose/src/: ekf_node_vio_timesync_with_acc_pub.cpp
src/tank_slam/livox_ros_driver2/: CMakeLists.txt  build.sh
src/tank_slam/livox_ros_driver2/config/: MID360_config.json
src/uneven_mapping/se2_grid/se2_grid_core/: CMakeLists.txt  package.xml
src/uneven_mapping/se2_grid/se2_grid_core/cmake/: se2_grid_core-extras.cmake
src/uneven_mapping/se2_grid/se2_grid_core/include/se2_grid_core/: SE2Grid.hpp
src/uneven_mapping/se2_grid/se2_grid_core/include/se2_grid_core/eigen_plugins/: Functors.hpp
src/uneven_mapping/se2_grid/se2_grid_core/include/se2_grid_core/iterators/: CircleIterator.hpp  EllipseIterator.hpp  SE2GridIterator.hpp  SpiralIterator.hpp  SubmapIterator.hpp  iterators.hpp
src/uneven_mapping/se2_grid/se2_grid_core/include/se2_grid_core/utils/: Polygon.hpp  untils.hpp
src/uneven_mapping/se2_grid/se2_grid_core/src/: SE2Grid.cpp
src/uneven_mapping/se2_grid/se2_grid_msgs/: CMakeLists.txt  package.xml
src/uneven_mapping/se2_grid/se2_grid_msgs/msg/: SE2Grid.msg  SE2GridInfo.msg
src/uneven_mapping/se2_grid/se2_grid_ros/: CMakeLists.txt  package.xml
src/uneven_mapping/se2_grid/se2_grid_ros/include/se2_grid_ros/: SE2GridMsgHelpers.hpp  SE2GridRosConverter.hpp  message_traits.hpp  se2_grid_ros.hpp
src/uneven_mapping/se2_grid/se2_grid_ros/src/: SE2GridMsgHelpers.cpp  SE2GridRosConverter.cpp
src/uneven_mapping/se2_grid/se2_grid_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/uneven_mapping/se2_grid/se2_grid_rviz_plugin/include/se2_grid_rviz_plugin/: SE2GridColorMaps.hpp  SE2GridDisplay.hpp  SE2GridVisual.hpp
src/uneven_mapping/se2_grid/se2_grid_rviz_plugin/include/se2_grid_rviz_plugin/modified/: message_filter_display.h
src/uneven_mapping/se2_grid/se2_grid_rviz_plugin/src/: SE2GridDisplay.cpp  SE2GridVisual.cpp
src/uneven_mapping/se2_grid/se2_grid_tests/: CMakeLists.txt  package.xml
src/uneven_mapping/se2_grid/se2_grid_tests/launch/: interpolation_test.launch  iterators_test.launch  move_test.launch
src/uneven_mapping/se2_grid/se2_grid_tests/rviz/: test.rviz
src/uneven_mapping/se2_grid/se2_grid_tests/src/: interpolation_test_node.cpp  iterators_test_node.cpp  move_test_node.cpp
src/uneven_mapping/terrain_analyzer/: CMakeLists.txt  package.xml  post_processors.xml
src/uneven_mapping/terrain_analyzer/include/terrain_analyzer/: TerrainAnalyzer.hpp
src/uneven_mapping/terrain_analyzer/include/terrain_analyzer/post_processors/: CurvatureComputer.hpp  InpaintProcessor.hpp  MathProcessor.hpp  MeanInRadiusFilter.hpp  NormalComputer.hpp  PostProcessorBase.hpp  SignedDistanceField.hpp  post_processors.hpp
src/uneven_mapping/terrain_analyzer/include/terrain_analyzer/sensor_processors/: OusterLidarProcessor.hpp  SensorProcessorVirtual.hpp  sensor_processors.hpp
src/uneven_mapping/terrain_analyzer/include/terrain_analyzer/utils/: WeightedEmpiricalCumulativeDistributionFunction.hpp  utils.hpp
src/uneven_mapping/terrain_analyzer/launch/: terrain_analyzer.launch
src/uneven_mapping/terrain_analyzer/params/: elevation_map.yaml  elevation_map_gpu.yaml
src/uneven_mapping/terrain_analyzer/src/: TerrainAnalyzer.cpp  TerrainBank.cu  TerrainBank_huawei.cu  post_processors.cpp  terrain_analyzer_node.cpp
src/uneven_mapping/terrain_analyzer/src/R2_terrain/: TerrainAnalyzerR2.cpp  TerrainBankR2.cu
