<?xml version="1.0"?>
<package format="2">
  <name>terrain_analyzer</name>
  <version>0.0.0</version>
  <description>Generates an se2 grid map from distance measurements and robot pose information.</description>
  <maintainer email="xulon666@gmail.com">Long Xu</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ZJU-FAST-Lab/uneven_mapping</url>
  <url type="bugtracker">https://github.com/ZJU-FAST-Lab/uneven_mapping/issues</url>
  <author email="xulon666@gmail.com">Long Xu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>eigen_conversions</depend>
  <depend>se2_grid_core</depend>
  <depend>se2_grid_msgs</depend>
  <depend>se2_grid_ros</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>pluginlib</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
    <terrain_analyzer plugin="${prefix}/post_processors.xml" />
  </export>

</package>
