<?xml version="1.0"?>
<package format="2">
  <name>se2_grid_core</name>
  <version>0.0.0</version>
  <description>Universal se2 grid library to manage two-dimensional grid maps with multiple data layers.</description>
  <maintainer email="xulon666@gmail.com">Long Xu</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ZJU-FAST-Lab/uneven_mapping</url>
  <url type="bugtracker">https://github.com/ZJU-FAST-Lab/uneven_mapping/issues</url>
  <author email="xulon666@gmail.com">Long Xu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
</package>
