<?xml version="1.0"?>
<package format="2">
  <name>se2_grid_msgs</name>
  <version>0.0.0</version>
  <description>Definition of the multi-layered se2 grid message type.</description>
  <maintainer email="xulon666@gmail.com">Long Xu</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ZJU-FAST-Lab/uneven_mapping</url>
  <url type="bugtracker">https://github.com/ZJU-FAST-Lab/uneven_mapping/issues</url>
  <author email="xulon666@gmail.com">Long Xu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
