<?xml version="1.0"?>
<package>
  <name>se2_grid_rviz_plugin</name>
  <version>0.0.0</version>
  <description>RViz plugin for displaying se2 grid messages.</description>
  <maintainer email="xulon666@gmail.com">Long Xu</maintainer>
  <license>BSD</license>
  <author email="xulon666@gmail.com">Long Xu</author>
  <author>Long Xu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>se2_grid_ros</build_depend>
  <build_depend>se2_grid_msgs</build_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>se2_grid_ros</run_depend>
  <run_depend>se2_grid_msgs</run_depend>
  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>