<?xml version="1.0"?>
<package format="2">
  <name>se2_grid_tests</name>
  <version>0.0.0</version>
  <description>Test nodes to demonstrate the usage of the se2 grid library.</description>
  <maintainer email="xulon666@gmail.com">Long Xu</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ZJU-FAST-Lab/uneven_mapping</url>
  <url type="bugtracker">https://github.com/ZJU-FAST-Lab/uneven_mapping/issues</url>
  <author email="xulon666@gmail.com">Long Xu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>se2_grid_core</depend>
  <depend>se2_grid_msgs</depend>
  <depend>se2_grid_ros</depend>
  <depend>se2_grid_rviz_plugin</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
